updated CSS to fix display bug when filename is too long

--- a/django_site/share/static/share/css/app.css
+++ b/django_site/share/static/share/css/app.css
@@ -61,10 +61,15 @@
     text-decoration: underline;
 }
 
+.share-name {
+    display: inline-block;
+    width: 85%;
+}
+
 .share-size {
-    position: absolute;
-    top: 0;
-    right: 0;
+    display: inline-block;
+    width: 15%;
+    text-align: right;
 }
 
 .share-directory {
